# Real_Time_Head_Pose_Estimation_from_Consumer_Depth_Cameras_Client_Server

head_pose_estimation_client/NiUserTracker/: Common.h  Config.cpp  Config.h  MovieMng.cpp  MovieMng.h  NiUserTracker.vcxproj  SceneDrawer.cpp  SceneDrawer.h  ServerCom.cpp  ServerCom.h  SkelMng.cpp  SkelMng.h  Util.cpp  Util.h  main.cpp
head_pose_estimation_client/NiUserTracker/x64Debug/: CL.read.1.tlog  CL.write.1.tlog  NiUserTracker.lastbuildstate  NiUserTracker64_manifest.rc  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  vc100.idb
head_pose_estimation_client/NiUserTracker/x64Release/: CL.read.1.tlog  NiUserTracker.lastbuildstate  OpenNI.res  cl.command.1.tlog  cl.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
head_pose_estimation_client/Res/: AssemblyInfo-OpenNI.cs
head_pose_estimation_server/: CMakeLists.txt  mingw_build_commands.txt
head_pose_estimation_server/demo/: CMakeLists.txt  config.txt  main.cpp
